--- a/index.html
+++ b/index.html
@@ -1,30 +1,191 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <div class="page">
+
+    <!--Шапка сайта-->
     <header class="header">
+      <!--Логотип ЯП-->
+      <img  class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип ЯП">
 
+      <!--Заголовок-->
+      <h1 class="header__title">Научиться учиться</h1>
+
+      <!--Подзаголовок-->
+      <p class="header__subtitle">
+        Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни
+        <!--Ссылка-->
+      <a href="#" class="header__link">Узнать →</a>
+      </p>
+
+      <!--Картинка-->
+      <img  class="header__main-illustration" src="./images/header-image.png" alt="Картинка: мальчик и собака">
+
+      <!--Квадрат-->
+      <div class="header__square-pic"></div>
     </header>
+
+    <!--Основное содержимое страницы-->
     <main class="content">
+
+      <!--Главные проблемы в обучении-->
       <section class="description">
+        <ul class="two-columns">
+          <li class="two-columns__brief">
+            <h2>Главные проблемы в обучении</h2>
+          </li>
+          <li class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph">
+              <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </li>
       </section>
 
+      <!--Цифры и факты-->
       <section class="digits">
+        <h2 class="section-title section-title_theme_dark">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">Про учёбу и мозг</h3>
+        <ul class="table table_theme_dark">
+          <li class="table__cell">
+            <h2 class="table__heading table__heading_theme_dark">86 миллиардов</h2>
+            <p class="table__text table__text_theme_dark">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading table__heading_theme_dark">2,1 миллиарда</h2>
+            <p class="table__text table__text_theme_dark table__text_p_1">Число нуждающихся в повышении квалификации
+            <p class="table__text table__text_p_2">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading table__heading_theme_dark">1000 терабайт</h2>
+            <p class="table__text table__text_theme_dark">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading table__heading_theme_dark">500 триллионов</h2>
+            <p class="table__text table__text_theme_dark">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading table__heading_theme_dark">420 миллионов</h2>
+            <p class="table__text table__text_theme_dark table__text_p_1">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_p_2">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading table__heading_theme_dark">17–20 лет</h2>
+            <p class="table__text table__text_theme_dark">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading table__heading_theme_dark">1885 год</h2>
+            <p class="table__text table__text_theme_dark">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h2 class="table__heading table__heading_theme_dark">1889 год</h2>
+            <p class="table__text table__text_theme_dark">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
+      <!--Фейнман-->
       <section class="feynman">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__title">Выучить и не забыть</h2>
+        <a class="feynman__link">Подробнее →</a>
+        <img  class="feynman__main-illustration" src="./images/feynman.png" alt="Картинка: feynman">
       </section>
 
+      <!--Кауфман-->
       <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">1</h2>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">2</h2>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">3</h2>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">4</h2>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">5</h2>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">6</h2>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">7</h2>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">8</h2>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">9</h2>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h2 class="table__heading table__heading_theme_dark">10</h2>
+            <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
       </section>
     </main>
-    <footer class="footer">
 
+    <!--Подвал сайта-->
+    <footer class="footer">
+      <!--Лого/Автор-->
+      <div class="footer__columns">
+        <div class="footer__columns footer__columns_content_copyright">
+          <img  class="logo logo_place_footer" src="./images/logo_place_header.svg" alt="Логотип ЯП">
+          <div class="footer__author">&copy; 2019. Виктор Абанькин</div>
+        </div>
+        <!--Ссылки-->
+        <!--О практикуме-->
+        <div class="footer__columns footer__columns_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <div class="footer__links">
+            <a class="footer__column-link">Главная</a>
+            <a class="footer__column-link">Концепция</a>
+            <a class="footer__column-link">Наставники</a>
+          </div>
+        </div>
+        <!--Соцсети-->
+        <div class="footer__columns footer__columns_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <div class="footer__links">
+            <a class="footer__column-link">
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка facebook">
+              Facebook
+            </a>
+            <a class="footer__column-link">
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка vk">
+              ВКонтакте
+            </a>
+            <a class="footer__column-link">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка instagram">
+              Instagram
+            </a>
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
