--- a/index.html
+++ b/index.html
@@ -37,57 +37,56 @@
 
       <!--Главные проблемы в обучении-->
       <section class="description">
-        <ul class="two-columns">
-          <li class="two-columns__brief">
-            <h2>Главные проблемы в обучении</h2>
-          </li>
-          <li class="two-columns__main-text">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
-            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
-          </li>
+            <p class="two-columns__paragraph two-columns__paragraph_indent">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
       </section>
 
       <!--Цифры и факты-->
       <section class="digits">
-        <h2 class="section-title section-title_theme_dark">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">Про учёбу и мозг</h3>
-        <ul class="table table_theme_dark">
-          <li class="table__cell">
-            <h2 class="table__heading table__heading_theme_dark">86 миллиардов</h2>
-            <p class="table__text table__text_theme_dark">Число нейронов в мозге человека</p>
+        <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
+        <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h3>
+        <ul class="table table_theme_light">
+          <li class="table__cell table__cell_theme_light">
+            <h2 class="table__heading table__heading_theme_light">86 миллиардов</h2>
+            <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
           </li>
-          <li class="table__cell">
-            <h2 class="table__heading table__heading_theme_dark">2,1 миллиарда</h2>
-            <p class="table__text table__text_theme_dark table__text_p_1">Число нуждающихся в повышении квалификации
-            <p class="table__text table__text_p_2">Всемирный Банк, 2017</p>
+          <li class="table__cell table__cell_theme_light">
+            <h2 class="table__heading table__heading_theme_light">2,1 миллиарда</h2>
+            <p class="table__text table__text_theme_light table__text_p-1">Число нуждающихся в повышении квалификации
+            <p class="table__text table__text_p-2">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell">
-            <h2 class="table__heading table__heading_theme_dark">1000 терабайт</h2>
-            <p class="table__text table__text_theme_dark">Объём памяти человека</p>
+          <li class="table__cell table__cell_theme_light">
+            <h2 class="table__heading table__heading_theme_light">1000 терабайт</h2>
+            <p class="table__text table__text_theme_light">Объём памяти человека</p>
           </li>
-          <li class="table__cell">
-            <h2 class="table__heading table__heading_theme_dark">500 триллионов</h2>
-            <p class="table__text table__text_theme_dark">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <li class="table__cell table__cell_theme_light">
+            <h2 class="table__heading table__heading_theme_light">500 триллионов</h2>
+            <p class="table__text table__text_theme_light">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
-          <li class="table__cell">
-            <h2 class="table__heading table__heading_theme_dark">420 миллионов</h2>
-            <p class="table__text table__text_theme_dark table__text_p_1">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_p_2">Всемирный Банк, 2017</p>
+          <li class="table__cell table__cell_theme_light">
+            <h2 class="table__heading table__heading_theme_light">420 миллионов</h2>
+            <p class="table__text table__text_theme_light table__text_p-1">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_p-2">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell">
-            <h2 class="table__heading table__heading_theme_dark">17–20 лет</h2>
-            <p class="table__text table__text_theme_dark">Пик обучаемости</p>
+          <li class="table__cell table__cell_theme_light">
+            <h2 class="table__heading table__heading_theme_light">17–20 лет</h2>
+            <p class="table__text table__text_theme_light">Пик обучаемости</p>
           </li>
-          <li class="table__cell">
-            <h2 class="table__heading table__heading_theme_dark">1885 год</h2>
-            <p class="table__text table__text_theme_dark">Открытие кривой забывания</p>
+          <li class="table__cell table__cell_theme_light">
+            <h2 class="table__heading table__heading_theme_light">1885 год</h2>
+            <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
           </li>
-          <li class="table__cell">
-            <h2 class="table__heading table__heading_theme_dark">1889 год</h2>
-            <p class="table__text table__text_theme_dark">Открытие условного рефлекса</p>
+          <li class="table__cell table__cell_theme_light">
+            <h2 class="table__heading table__heading_theme_light">1889 год</h2>
+            <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
@@ -95,9 +94,8 @@
       <!--Фейнман-->
       <section class="feynman">
         <h1 class="feynman__title">Метод Фейнмана</h1>
-        <h2 class="feynman__title">Выучить и не забыть</h2>
-        <a class="feynman__link">Подробнее →</a>
-        <img  class="feynman__main-illustration" src="./images/feynman.png" alt="Картинка: feynman">
+        <h2 class="feynman__subtitle">Выучить и не забыть</h2>
+        <a href="" class="feynman__link">Подробнее →</a>
       </section>
 
       <!--Кауфман-->
@@ -146,6 +144,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
 
@@ -161,29 +160,29 @@
         <!--О практикуме-->
         <div class="footer__columns footer__columns_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <div class="footer__links">
-            <a class="footer__column-link">Главная</a>
-            <a class="footer__column-link">Концепция</a>
-            <a class="footer__column-link">Наставники</a>
-          </div>
+          <nav class="footer__links">
+            <a href="https://practicum.yandex.ru" class="footer__column-link">Главная</a>
+            <a href="" class="footer__column-link">Концепция</a>
+            <a href="" class="footer__column-link">Наставники</a>
+          </nav>
         </div>
         <!--Соцсети-->
         <div class="footer__columns footer__columns_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__links">
-            <a class="footer__column-link">
+          <nav class="footer__links">
+            <a href="https://ru-ru.facebook.com/" class="footer__column-link">
               <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка facebook">
               Facebook
             </a>
-            <a class="footer__column-link">
+            <a href="https://vk.com/" class="footer__column-link">
               <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка vk">
               ВКонтакте
             </a>
-            <a class="footer__column-link">
+            <a href="https://www.instagram.com/" class="footer__column-link">
               <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка instagram">
               Instagram
             </a>
-          </div>
+          </nav>
         </div>
       </div>
     </footer>
