--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
     <footer class="footer">
       <!--Лого/Автор-->
       <div class="footer__columns">
-        <div class="footer__columns footer__columns_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img  class="logo logo_place_footer" src="./images/logo_place_header.svg" alt="Логотип ЯП">
           <div class="footer__author">&copy; 2019. Виктор Абанькин</div>
         </div>
         <!--Ссылки-->
         <!--О практикуме-->
-        <div class="footer__columns footer__columns_content_info">
+        <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__links">
             <a href="https://practicum.yandex.ru" class="footer__column-link">Главная</a>
@@ -167,7 +167,7 @@
           </nav>
         </div>
         <!--Соцсети-->
-        <div class="footer__columns footer__columns_content_social">
+        <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__links">
             <a href="https://ru-ru.facebook.com/" class="footer__column-link">
