--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни
         <!--Ссылка-->
-      <a href="#" class="header__link">Узнать →</a>
+        <a href="#" class="header__link">Узнать →</a>
       </p>
 
       <!--Картинка-->
@@ -44,7 +44,7 @@
             <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
-            <p class="two-columns__paragraph two-columns__paragraph_indent">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class="two-columns__paragraph two-columns__paragraph_last">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
@@ -60,8 +60,8 @@
           </li>
           <li class="table__cell table__cell_theme_light">
             <h2 class="table__heading table__heading_theme_light">2,1 миллиарда</h2>
-            <p class="table__text table__text_theme_light table__text_p-1">Число нуждающихся в повышении квалификации
-            <p class="table__text table__text_p-2">Всемирный Банк, 2017</p>
+            <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации
+            <p class="table__text table__text_p-last">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell table__cell_theme_light">
             <h2 class="table__heading table__heading_theme_light">1000 терабайт</h2>
@@ -73,8 +73,8 @@
           </li>
           <li class="table__cell table__cell_theme_light">
             <h2 class="table__heading table__heading_theme_light">420 миллионов</h2>
-            <p class="table__text table__text_theme_light table__text_p-1">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_p-2">Всемирный Банк, 2017</p>
+            <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text table__text_p-last">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell table__cell_theme_light">
             <h2 class="table__heading table__heading_theme_light">17–20 лет</h2>
@@ -161,27 +161,27 @@
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__links">
-            <a href="https://practicum.yandex.ru" class="footer__column-link">Главная</a>
-            <a href="" class="footer__column-link">Концепция</a>
-            <a href="" class="footer__column-link">Наставники</a>
+            <a href=""  class="footer__column-link">Главная</a>
+            <a href=""  class="footer__column-link">Концепция</a>
+            <a href=""  class="footer__column-link">Наставники</a>
           </nav>
         </div>
         <!--Соцсети-->
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__links">
-            <a href="https://ru-ru.facebook.com/" class="footer__column-link">
-              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка facebook">
+            <a href="" class="footer__column-link">
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">
               Facebook
             </a>
-            <a href="https://vk.com/" class="footer__column-link">
-              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка vk">
+            <a href="" class="footer__column-link">
+            <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка VK">
               ВКонтакте
             </a>
-            <a href="https://www.instagram.com/" class="footer__column-link">
-              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка instagram">
+            <a href="" class="footer__column-link">
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">
               Instagram
-            </a>
+              </a>
           </nav>
         </div>
       </div>
