--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </li>
           <li class="table__cell table__cell_theme_light">
             <h2 class="table__heading table__heading_theme_light">2,1 миллиарда</h2>
-            <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации
+            <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
             <p class="table__text table__text_p-last">Всемирный Банк, 2017</p>
           </li>
           <li class="table__cell table__cell_theme_light">
