--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни
         <!--Ссылка-->
-        <a href="#" class="header__link">Узнать →</a>
+        <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
 
       <!--Картинка-->
@@ -37,110 +37,110 @@
 
       <!--Главные проблемы в обучении-->
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
             <p class="two-columns__paragraph">
               <span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
-            <p class="two-columns__paragraph two-columns__paragraph_last">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <!--Цифры и факты-->
       <section class="digits">
-        <h2 class="section-title section-title_theme_light">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle_theme_light">Про учёбу и мозг</h3>
-        <ul class="table table_theme_light">
-          <li class="table__cell table__cell_theme_light">
-            <h2 class="table__heading table__heading_theme_light">86 миллиардов</h2>
-            <p class="table__text table__text_theme_light">Число нейронов в мозге человека</p>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
+          <li class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h2 class="table__heading table__heading_theme_light">2,1 миллиарда</h2>
-            <p class="table__text table__text_theme_light">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text table__text_p-last">Всемирный Банк, 2017</p>
+          <li class="table__cell">
+            <h3 class="table__heading">2,1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h2 class="table__heading table__heading_theme_light">1000 терабайт</h2>
-            <p class="table__text table__text_theme_light">Объём памяти человека</p>
+          <li class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h2 class="table__heading table__heading_theme_light">500 триллионов</h2>
-            <p class="table__text table__text_theme_light">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <li class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h2 class="table__heading table__heading_theme_light">420 миллионов</h2>
-            <p class="table__text table__text_theme_light">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text table__text_p-last">Всемирный Банк, 2017</p>
+          <li class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text ">Всемирный Банк, 2017</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h2 class="table__heading table__heading_theme_light">17–20 лет</h2>
-            <p class="table__text table__text_theme_light">Пик обучаемости</p>
+          <li class="table__cell">
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h2 class="table__heading table__heading_theme_light">1885 год</h2>
-            <p class="table__text table__text_theme_light">Открытие кривой забывания</p>
+          <li class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </li>
-          <li class="table__cell table__cell_theme_light">
-            <h2 class="table__heading table__heading_theme_light">1889 год</h2>
-            <p class="table__text table__text_theme_light">Открытие условного рефлекса</p>
+          <li class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </li>
         </ul>
       </section>
 
       <!--Фейнман-->
       <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
-        <h2 class="feynman__subtitle">Выучить и не забыть</h2>
-        <a href="" class="feynman__link">Подробнее →</a>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a href="" class="feynman__link">Подробнее &rarr;</a>
       </section>
 
       <!--Кауфман-->
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">1</h2>
+            <h3 class="table__heading table__heading_theme_dark">1</h3>
             <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">2</h2>
+            <h3 class="table__heading table__heading_theme_dark">2</h3>
             <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">3</h2>
+            <h3 class="table__heading table__heading_theme_dark">3</h3>
             <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">4</h2>
+            <h3 class="table__heading table__heading_theme_dark">4</h3>
             <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">5</h2>
+            <h3 class="table__heading table__heading_theme_dark">5</h3>
             <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">6</h2>
+            <h3 class="table__heading table__heading_theme_dark">6</h3>
             <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">7</h2>
+            <h3 class="table__heading table__heading_theme_dark">7</h3>
             <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">8</h2>
+            <h3 class="table__heading table__heading_theme_dark">8</h3>
             <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">9</h2>
+            <h3 class="table__heading table__heading_theme_dark">9</h3>
             <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </li>
           <li class="table__cell table__cell_theme_dark">
-            <h2 class="table__heading table__heading_theme_dark">10</h2>
+            <h3 class="table__heading table__heading_theme_dark">10</h3>
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
@@ -153,14 +153,14 @@
       <!--Лого/Автор-->
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img  class="logo logo_place_footer" src="./images/logo_place_header.svg" alt="Логотип ЯП">
-          <div class="footer__author">&copy; 2019. Виктор Абанькин</div>
+          <img  class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип ЯП">
+          <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
         </div>
         <!--Ссылки-->
         <!--О практикуме-->
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <nav class="footer__links">
+          <nav class="footer__column-links">
             <a href=""  class="footer__column-link">Главная</a>
             <a href=""  class="footer__column-link">Концепция</a>
             <a href=""  class="footer__column-link">Наставники</a>
@@ -169,7 +169,7 @@
         <!--Соцсети-->
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <nav class="footer__links">
+          <nav class="footer__column-links">
             <a href="" class="footer__column-link">
               <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">
               Facebook
@@ -181,7 +181,7 @@
             <a href="" class="footer__column-link">
               <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">
               Instagram
-              </a>
+            </a>
           </nav>
         </div>
       </div>
