--- a/index.html
+++ b/index.html
@@ -49,6 +49,73 @@
         </article>
       </section>
 
+      <!-- Техники обучения -->
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="Два вида внимания">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Recall">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Интерливинг">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="Вопросы">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="Иллюзия компетентности">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+          <li class="cards__item"></li>
+        </ul>
+      </section>
+
+      <!-- Видео -->
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+            src="https://www.youtube.com/embed/5MgBikgcWnY"
+            frameborder="0" allowfullscreen>
+          </iframe>
+          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+            src="https://www.youtube.com/embed/arj7oStGLkU"
+            frameborder="0" allowfullscreen>
+          </iframe>
+        </div>
+      </section>
+
+      <!--История Барбары Оакли-->
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </article>
+      </section>
+
+      <!--Фейнман-->
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+      </section>
+
       <!--Цифры и факты-->
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -91,11 +158,19 @@
         </ul>
       </section>
 
-      <!--Фейнман-->
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть</p>
-        <a href="" class="feynman__link">Подробнее &rarr;</a>
+      <!-- Весь мир — школа -->
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка: khan-book">
+            <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
 
       <!--Кауфман-->
@@ -148,37 +223,60 @@
       </section>
     </main>
 
+    <!-- Полезные ресурсы -->
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <nav class="resources__logo-zone">
+        <a href="#">
+          <img class="resources__logo" src="./images/resources-arzamas.svg" alt="Ссылка arzamas">
+        </a>
+        <a href="#">
+          <img class="resources__logo" src="./images/resources-n1.svg" alt="Ссылка n1">
+        </a>
+        <a href="#">
+          <img class="resources__logo" src="./images/resources-strelka.svg" alt="Ссылка strelka">
+        </a>
+        <a href="#">
+          <img class="resources__logo" src="./images/resources-polka.svg" alt="Ссылка polka">
+        </a>
+      </nav>
+    </section>
+
     <!--Подвал сайта-->
     <footer class="footer">
+
       <!--Лого/Автор-->
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <img  class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип ЯП">
           <p class="footer__author">&copy; 2019. Виктор Абанькин</p>
         </div>
+
         <!--Ссылки-->
         <!--О практикуме-->
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__column-links">
-            <a href=""  class="footer__column-link">Главная</a>
-            <a href=""  class="footer__column-link">Концепция</a>
-            <a href=""  class="footer__column-link">Наставники</a>
+            <a href="#"  class="footer__column-link">Главная</a>
+            <a href="#"  class="footer__column-link">Концепция</a>
+            <a href="#"  class="footer__column-link">Наставники</a>
           </nav>
         </div>
+
         <!--Соцсети-->
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
-            <a href="" class="footer__column-link">
+            <a href="#" class="footer__column-link">
               <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="иконка Facebook">
               Facebook
             </a>
-            <a href="" class="footer__column-link">
+            <a href="#" class="footer__column-link">
             <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="иконка VK">
               ВКонтакте
             </a>
-            <a href="" class="footer__column-link">
+            <a href="#" class="footer__column-link">
               <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="иконка Instagram">
               Instagram
             </a>
